--- a/DvachBrowser3.TextRender/DvachBrowser3.TextRender.csproj
+++ b/DvachBrowser3.TextRender/DvachBrowser3.TextRender.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Attributes\ITextRenderAttributeState.cs" />
     <Compile Include="Attributes\ITextRenderLinkAttribute.cs" />
     <Compile Include="Attributes\LinkTextRenderAttribute.cs" />
+    <Compile Include="Attributes\ReadonlyTextRenderAttributeState.cs" />
     <Compile Include="Attributes\TextRenderAttributeState.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RenderProgram\AttributeRenderProgramElement.cs" />
@@ -64,6 +65,7 @@
     <Compile Include="Render\ITextRenderCommandFormer.cs" />
     <Compile Include="Render\ITextRenderContent.cs" />
     <Compile Include="Render\ITextRenderLogic.cs" />
+    <Compile Include="Render\ITextRenderProgramConsumer.cs" />
     <Compile Include="Render\ITextRenderTextContent.cs" />
     <Compile Include="Render\IWordSplitter.cs" />
     <Compile Include="Render\CycleCache.cs" />
