--- a/DvachBrowser3/DvachBrowser3.csproj
+++ b/DvachBrowser3/DvachBrowser3.csproj
@@ -253,12 +253,14 @@
     <Compile Include="ViewModels\Main\Implementation\FavoriteThreadTileViewModel.cs" />
     <Compile Include="ViewModels\Main\Implementation\IMainTileUpdater.cs" />
     <Compile Include="ViewModels\Main\Implementation\IThreadTileUpdater.cs" />
+    <Compile Include="ViewModels\Main\Implementation\MainViewModel.cs" />
     <Compile Include="ViewModels\Main\Implementation\ThreadTileViewModelBase.cs" />
     <Compile Include="ViewModels\Main\Implementation\ThreadListUpdateId.cs" />
     <Compile Include="ViewModels\Main\Implementation\VisitedMainGroupViewModel.cs" />
     <Compile Include="ViewModels\Main\Implementation\VisitedMainTileViewModel.cs" />
     <Compile Include="ViewModels\Main\Implementation\VisitedThreadTileViewModel.cs" />
     <Compile Include="ViewModels\Main\IThreadTileViewModel.cs" />
+    <Compile Include="ViewModels\Main\MainStringReference.cs" />
     <Compile Include="ViewModels\Operations\EngineOperationWrapper.cs" />
     <Compile Include="ViewModels\Operations\IOperationProgressViewModel.cs" />
     <Compile Include="ViewModels\Operations\IOperationViewModel.cs" />
