--- a/DvachBrowser3/DvachBrowser3.csproj
+++ b/DvachBrowser3/DvachBrowser3.csproj
@@ -432,6 +432,9 @@
     <Compile Include="Views\Partial\SinglePostCollectionView.xaml.cs">
       <DependentUpon>SinglePostCollectionView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\Partial\ThreadTile.xaml.cs">
+      <DependentUpon>ThreadTile.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\Partial\TileImage.xaml.cs">
       <DependentUpon>TileImage.xaml</DependentUpon>
     </Compile>
@@ -585,6 +588,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\Partial\SinglePostCollectionView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Partial\ThreadTile.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
