--- a/DvachBrowser3.TextRender/DvachBrowser3.TextRender.csproj
+++ b/DvachBrowser3.TextRender/DvachBrowser3.TextRender.csproj
@@ -33,6 +33,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .NET Framework is automatically included -->
   </ItemGroup>
