--- a/DvachBrowser3/DvachBrowser3.csproj
+++ b/DvachBrowser3/DvachBrowser3.csproj
@@ -12,15 +12,16 @@
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
     <TargetPlatformVersion>10.0.10586.0</TargetPlatformVersion>
-    <TargetPlatformMinVersion>10.0.10586.0</TargetPlatformMinVersion>
+    <TargetPlatformMinVersion>10.0.10240.0</TargetPlatformMinVersion>
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <EnableDotNetNativeCompatibleProfile>true</EnableDotNetNativeCompatibleProfile>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <PackageCertificateKeyFile>DvachBrowser3_TemporaryKey.pfx</PackageCertificateKeyFile>
+    <PackageCertificateKeyFile>DvachBrowser3_StoreKey.pfx</PackageCertificateKeyFile>
     <AppxAutoIncrementPackageRevision>True</AppxAutoIncrementPackageRevision>
     <AppxBundle>Always</AppxBundle>
-    <AppxBundlePlatforms>arm</AppxBundlePlatforms>
+    <AppxBundlePlatforms>x86|x64|arm</AppxBundlePlatforms>
+    <PackageCertificateThumbprint>7E8CC488D01159924860D8DD68D103319ABBD539</PackageCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|ARM'">
     <DebugSymbols>true</DebugSymbols>
@@ -96,6 +97,8 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="DvachBrowser3_StoreKey.pfx" />
+    <None Include="Package.StoreAssociation.xml" />
     <Content Include="Resources\MakabaLogo.png" />
     <None Include="project.json" />
   </ItemGroup>
@@ -193,17 +196,17 @@
     <Compile Include="PageServices\StoreNavigationDataPageService.cs" />
     <Compile Include="PageServices\ViewModelLifetimePageService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Styles\Manager\Implementation\StyleManager.cs" />
-    <Compile Include="Styles\Manager\Implementation\StyleManagerFactory.cs" />
-    <Compile Include="Styles\Manager\Implementation\StyleManagerIcons.cs" />
-    <Compile Include="Styles\Manager\Implementation\StyleManagerObjectBase.cs" />
-    <Compile Include="Styles\Manager\Implementation\StyleManagerText.cs" />
-    <Compile Include="Styles\Manager\Implementation\StyleManagerTiles.cs" />
-    <Compile Include="Styles\Manager\IStyleManager.cs" />
-    <Compile Include="Styles\Manager\IStyleManagerFactory.cs" />
-    <Compile Include="Styles\Manager\IStyleManagerIcons.cs" />
-    <Compile Include="Styles\Manager\IStyleManagerText.cs" />
-    <Compile Include="Styles\Manager\IStyleManagerTiles.cs" />
+    <Compile Include="Resources\Styles\Manager\Implementation\StyleManager.cs" />
+    <Compile Include="Resources\Styles\Manager\Implementation\StyleManagerFactory.cs" />
+    <Compile Include="Resources\Styles\Manager\Implementation\StyleManagerIcons.cs" />
+    <Compile Include="Resources\Styles\Manager\Implementation\StyleManagerObjectBase.cs" />
+    <Compile Include="Resources\Styles\Manager\Implementation\StyleManagerText.cs" />
+    <Compile Include="Resources\Styles\Manager\Implementation\StyleManagerTiles.cs" />
+    <Compile Include="Resources\Styles\Manager\IStyleManager.cs" />
+    <Compile Include="Resources\Styles\Manager\IStyleManagerFactory.cs" />
+    <Compile Include="Resources\Styles\Manager\IStyleManagerIcons.cs" />
+    <Compile Include="Resources\Styles\Manager\IStyleManagerText.cs" />
+    <Compile Include="Resources\Styles\Manager\IStyleManagerTiles.cs" />
     <Compile Include="ViewModels\Banners\BannerLoadedEventArgs.cs" />
     <Compile Include="ViewModels\Banners\BannerLoadedEventHandler.cs" />
     <Compile Include="ViewModels\Banners\Implementation\MakabaPageBannerViewModel.cs" />
@@ -310,9 +313,11 @@
     <Compile Include="ViewModels\Post\Implementation\Collections\UpdateablePostCollectionViewModelBase.cs" />
     <Compile Include="ViewModels\Post\Implementation\PostFlagsViewModel.cs" />
     <Compile Include="ViewModels\Post\Implementation\PostNameViewModel.cs" />
+    <Compile Include="ViewModels\Post\Implementation\PostTags.cs" />
     <Compile Include="ViewModels\Post\IPostFlagsViewModel.cs" />
     <Compile Include="ViewModels\Post\IPostNameViewModel.cs" />
     <Compile Include="ViewModels\Post\IPostQuoteViewModel.cs" />
+    <Compile Include="ViewModels\Post\IPostTags.cs" />
     <Compile Include="ViewModels\Post\IThreadPostNavigationStackViewModel.cs" />
     <Compile Include="ViewModels\Post\IThreadPreviewViewModel.cs" />
     <Compile Include="ViewModels\Post\Implementation\Media\ImageMediaFileViewModel.cs" />
@@ -491,11 +496,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="Styles\Custom.xaml">
+    <Page Include="Resources\Styles\Custom.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Styles\PostRender.xaml">
+    <Page Include="Resources\Styles\PostRender.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
