--- a/DvachBrowser3/project.json
+++ b/DvachBrowser3/project.json
@@ -1,13 +1,14 @@
 ﻿{
   "dependencies": {
-    "Microsoft.ApplicationInsights": "2.0.1",
+    "Microsoft.ApplicationInsights": "2.1.0",
     "Microsoft.ApplicationInsights.PersistenceChannel": "1.2.3",
     "Microsoft.ApplicationInsights.WindowsApps": "1.1.1",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
     "Microsoft.Xaml.Behaviors.Uwp.Managed": "1.1.0",
     "Newtonsoft.Json": "8.0.3",
-    "Win2D.uwp": "1.17.0",
-    "XamlAnimatedGif": "1.1.2"
+    "Template10": "1.1.11",
+    "Win2D.uwp": "1.18.0",
+    "XamlAnimatedGif": "1.1.4"
   },
   "frameworks": {
     "uap10.0": {}
