--- a/DvachBrowser3/project.json
+++ b/DvachBrowser3/project.json
@@ -3,11 +3,11 @@
     "Microsoft.ApplicationInsights": "2.1.0",
     "Microsoft.ApplicationInsights.PersistenceChannel": "1.2.3",
     "Microsoft.ApplicationInsights.WindowsApps": "1.1.1",
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
     "Microsoft.Xaml.Behaviors.Uwp.Managed": "1.1.0",
-    "Newtonsoft.Json": "8.0.3",
-    "Template10": "1.1.11",
-    "Win2D.uwp": "1.18.0",
+    "Newtonsoft.Json": "9.0.1",
+    "Template10": "1.1.12-preview-160712",
+    "Win2D.uwp": "1.19.0",
     "XamlAnimatedGif": "1.1.4"
   },
   "frameworks": {
