--- a/DvachBrowser3.Engines.Makaba/DvachBrowser3.Engines.Makaba.csproj
+++ b/DvachBrowser3.Engines.Makaba/DvachBrowser3.Engines.Makaba.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Engines\Makaba\MakabaUriService.cs" />
     <Compile Include="Engines\Makaba\Operations\MakabaCatalogArgument.cs" />
     <Compile Include="Engines\Makaba\Operations\MakabaCheckNoCaptchaAbilityOperation.cs" />
+    <Compile Include="Engines\Makaba\Operations\MakabaCheckNoCaptchaAbilityV2Operation.cs" />
     <Compile Include="Engines\Makaba\Operations\MakabaGetBoardPageOperation.cs" />
     <Compile Include="Engines\Makaba\Operations\MakabaGetBoardsOperation.cs" />
     <Compile Include="Engines\Makaba\Operations\MakabaGetCaptchaArgument.cs" />
