--- a/DvachBrowser3.Ui.Common/DvachBrowser3.Ui.Common.csproj
+++ b/DvachBrowser3.Ui.Common/DvachBrowser3.Ui.Common.csproj
@@ -108,6 +108,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\EmptyVisualState.cs" />
     <Compile Include="ViewModels\IViewModel.cs" />
     <Compile Include="ViewModels\IViewModelOperation.cs" />
     <Compile Include="ViewModels\ViewModelOperationProgress.cs" />
@@ -116,6 +117,7 @@
     <Compile Include="ViewModels\ViewModelOperationStateChangedEventArgs.cs" />
     <Compile Include="ViewModels\ViewModelState.cs" />
     <Compile Include="ViewModels\ViewModelStateChangedEventArgs.cs" />
+    <Compile Include="ViewModels\VisualState.cs" />
     <EmbeddedResource Include="Properties\DvachBrowser3.Ui.Common.rd.xml" />
   </ItemGroup>
   <ItemGroup>
