--- a/DvachBrowser3.Ui.Common/DvachBrowser3.Ui.Common.csproj
+++ b/DvachBrowser3.Ui.Common/DvachBrowser3.Ui.Common.csproj
@@ -111,12 +111,15 @@
     <Compile Include="ViewModels\EmptyVisualState.cs" />
     <Compile Include="ViewModels\IViewModel.cs" />
     <Compile Include="ViewModels\IViewModelOperation.cs" />
+    <Compile Include="ViewModels\ViewModelOperationBase.cs" />
     <Compile Include="ViewModels\ViewModelOperationProgress.cs" />
     <Compile Include="ViewModels\ViewModelOperationProgressEventArgs.cs" />
     <Compile Include="ViewModels\ViewModelOperationState.cs" />
     <Compile Include="ViewModels\ViewModelOperationStateChangedEventArgs.cs" />
     <Compile Include="ViewModels\ViewModelState.cs" />
     <Compile Include="ViewModels\ViewModelStateChangedEventArgs.cs" />
+    <Compile Include="ViewModels\ViewModelTaskFactoryOperationWrapper.cs" />
+    <Compile Include="ViewModels\ViewModelTaskOperationWrapper.cs" />
     <Compile Include="ViewModels\VisualState.cs" />
     <EmbeddedResource Include="Properties\DvachBrowser3.Ui.Common.rd.xml" />
   </ItemGroup>
