--- a/DvachBrowser3.Ui.Common/DvachBrowser3.Ui.Common.csproj
+++ b/DvachBrowser3.Ui.Common/DvachBrowser3.Ui.Common.csproj
@@ -107,6 +107,7 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommonUiConsts.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\EmptyVisualState.cs" />
     <Compile Include="ViewModels\IViewModel.cs" />
