--- a/DvachBrowser3.Ui.Common/DvachBrowser3.Ui.Common.csproj
+++ b/DvachBrowser3.Ui.Common/DvachBrowser3.Ui.Common.csproj
@@ -112,6 +112,8 @@
     <Compile Include="ViewModels\EmptyVisualState.cs" />
     <Compile Include="ViewModels\IViewModel.cs" />
     <Compile Include="ViewModels\IViewModelOperation.cs" />
+    <Compile Include="ViewModels\IViewModelPersistService.cs" />
+    <Compile Include="ViewModels\PersistentViewModelBase.cs" />
     <Compile Include="ViewModels\ViewModelBase.cs" />
     <Compile Include="ViewModels\ViewModelEngineOperationWrapper.cs" />
     <Compile Include="ViewModels\ViewModelOperationBase.cs" />
