--- a/DvachBrowser3.Ui.Common/DvachBrowser3.Ui.Common.csproj
+++ b/DvachBrowser3.Ui.Common/DvachBrowser3.Ui.Common.csproj
@@ -109,7 +109,7 @@
   <ItemGroup>
     <Compile Include="CommonUiConsts.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewModels\DispatchedViewModel.cs" />
+    <Compile Include="ViewModels\DispatchedObjectBase.cs" />
     <Compile Include="ViewModels\EmptyVisualState.cs" />
     <Compile Include="ViewModels\IViewModel.cs" />
     <Compile Include="ViewModels\IViewModelForegroundState.cs" />
